--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,10 @@
 name = "rust_nuggets"
 version = "0.1.0"
 edition = "2021"
+default-run = "rust_nuggets"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+serde = { version = "1.0.196", features = ["derive"] }
+serde_json = { version = "1.0.113" }
