--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,3 +19,10 @@ jobs:
         run: docker build -t 860x9/rust_nuggets:latest .
       - name: Run tests in docker container
         run: docker run --rm 860x9/rust_nuggets cargo test --release --verbose
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Push to Docker Hub
+        run: docker push 860x9/rust_nuggets:latest
