--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,22 +8,29 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  GITHUB_ACTIONS: true
 
 jobs:
   build:
     runs-on: ubuntu-latest
+    services:
+      httpbin:
+        image: kennethreitz/httpbin
 
     steps:
       - uses: actions/checkout@v4
       - name: Set up linker
         run: docker build -t 860x9/rust_nuggets:latest .
-      - name: Setup testing image
-        run: docker run -d -p 80:80 kennethreitz/httpbin
+      - name: Start testing container
+        run: docker run --network-alias httpbin -d -p 8080:80 kennethreitz/httpbin
       - name: Run tests in docker container
-        run: docker run --rm 860x9/rust_nuggets cargo test --release --verbose
-      - name: Clean up testing image
+        env:
+          GITHUB_ACTIONS: true
+          LOCAL: false
+        run: docker run --network-alias httpbin --rm -e LOCAL=false -e GITHUB_ACTIONS=true 860x9/rust_nuggets cargo test --release --verbose
+      - name: Stop testing container
         run: docker kill $(docker ps -q)
-      - name: Delete testing image
+      - name: Delete testing container
         run: docker rm $(docker ps -a -q)
       - name: Login to Docker Hub
         uses: docker/login-action@v3
@@ -32,3 +39,9 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
       - name: Push to Docker Hub
         run: docker push 860x9/rust_nuggets:latest
+
+  job-with-no-dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Job with no dependencies
+        run: echo "This job has no dependencies"
