--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,10 @@ default-run = "rust_nuggets"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+dotenvy = "0.15.7"
 error-chain = "0.12.4"
-reqwest = { version = "0.11.24", features = ["json", "blocking"] }
+futures-util = "0.3.30"
+reqwest = { version = "0.11.24", features = ["json", "blocking", "stream"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = { version = "1.0.113" }
 tokio = { version = "1.36.0", features = ["full"] }
