--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,4 +13,5 @@ futures-util = "0.3.30"
 reqwest = { version = "0.11.24", features = ["json", "blocking", "stream"] }
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = { version = "1.0.113" }
+tempfile = "3.10.1"
 tokio = { version = "1.36.0", features = ["full"] }
