--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dotenvy = "0.15.7"
 error-chain = "0.12.4"
 futures-util = "0.3.30"
 reqwest = { version = "0.11.24", features = ["json", "blocking", "stream"] }
+select = "0.6.0"
 serde = { version = "1.0.196", features = ["derive"] }
 serde_json = { version = "1.0.113" }
 tempfile = "3.10.1"
