--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ dotenvy = "0.15.7"
 error-chain = "0.12.4"
 futures-util = "0.3.30"
 k256 = "0.13.3"
+rand = "0.8.5"
 reqwest = { version = "0.11.24", features = ["json", "blocking", "stream"] }
 select = "0.6.0"
 serde = { version = "1.0.196", features = ["derive"] }
