--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ serde = { version = "1.0.196", features = ["derive"] }
 serde_json = { version = "1.0.113" }
 tempfile = "3.10.1"
 tokio = { version = "1.36.0", features = ["full"] }
+sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
+sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
