--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,4 @@ tempfile = "3.10.1"
 tokio = { version = "1.36.0", features = ["full"] }
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
 sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
+num = "0.4"
