--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,3 +21,4 @@ tokio = { version = "1.36.0", features = ["full"] }
 sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
 sp1-core = { git = "https://github.com/succinctlabs/sp1.git" }
 num = "0.4"
+ansi_term = "0.12.1"
