--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,3 +26,10 @@ hyper = { version = "1.2.0", features = ["full"] }
 hyperlocal = "0.8.0"
 http-body-util = "0.1"
 hyper-util = { version = "0.1", features = ["full"] }
+tower-http = { version = "0.4", features = ["cors"] }
+tower = "0.4"
+chrono = { version = "0.4", features = ["serde"] }
+tracing = "0.1"
+tracing-subscriber = "0.3"
+axum = "0.6"
+socketioxide = { version = "0.8", features = ["state"] }
