--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,3 +33,9 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 axum = "0.6"
 socketioxide = { version = "0.8", features = ["state"] }
+sqlx = { version = "0.5.9", features = [
+    "runtime-async-std-native-tls",
+    "sqlite",
+] }
+async-std = { version = "1.6", features = ["attributes"] }
+futures = "0.3.18"
