--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ error-chain = "0.12.4"
 futures-util = "0.3.30"
 k256 = "0.13.3"
 rand = "0.8.5"
+sha3 = "0.10"
 reqwest = { version = "0.12.3", features = ["json", "blocking", "stream"] }
 select = "0.6.0"
 serde = { version = "1.0.196", features = ["derive"] }
